--- a/backend/students/templates/add_student.html
+++ b/backend/students/templates/add_student.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Student</title>
 </head>
 <body>
@@ -9,8 +10,7 @@
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Submit</button>
+        <button type="submit">Save</button>
     </form>
-    <a href="{% url 'student_list' %}">Back to Student List</a>
 </body>
 </html>
