--- a/backend/students/templates/student_list.html
+++ b/backend/students/templates/student_list.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student List</title>
 </head>
 <body>
     <h1>Student List</h1>
     <ul>
         {% for student in students %}
-            <li>{{ student.first_name }} {{ student.last_name }} - {{ student.email }}</li>
+            <li>{{ student.name }} - {{ student.age }}</li>
         {% endfor %}
     </ul>
-    <a href="{% url 'add_student' %}">Add New Student</a>
 </body>
 </html>
