correcting path and all

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>School Management</title>
+    {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
@@ -14,7 +15,7 @@
         </nav>
     </header>
     <footer>
-        <p>School Management System &copy; 2025</p>
+        <p>&copy; 2025 School Management System</p>
     </footer>
 </body>
 </html>
