adding home school page

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -11,7 +11,9 @@
         <h1>Welcome to the School Management System</h1>
         <nav>
             <a href="/students/">View Students</a> | 
-            <a href="/students/add/">Add Student</a>
+            <a href="/students/add/">Add Student</a>| 
+            <a href="/gestion/">Gestion</a>
+
         </nav>
     </header>
     <footer>
