--- a/frontend/templates/Gestionduneecole.html
+++ b/frontend/templates/Gestionduneecole.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestion d'École - Tableau de Bord</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
 </head>
 <body>
 
