--- a/frontend/templates/Gestionduneecole.html
+++ b/frontend/templates/Gestionduneecole.html
@@ -6,6 +6,8 @@
     <title>Gestion d'École - Tableau de Bord</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="icon" href="{% static 'assets/favicon.ico' %}" type="image/x-icon">
+
 
 </head>
 <body>
