--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -5,6 +5,8 @@
     <title>School Management</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="icon" href="{% static 'assets/favicon.ico' %}" type="image/x-icon">
+
 </head>
 <body>
     <header>
