--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -10,10 +10,9 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to the School Management System</h1>
+        <h1>Bienvenue sur Masomo</h1>
         <nav>
-            <a href="/students/">View Students</a> | 
-            <a href="/students/add/">Add Student</a>| 
+            <a href="/students/">Etudiants</a> | 
             <a href="/gestion/">Gestion</a>
 
         </nav>
