--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -1,77 +1,86 @@
-* {
+
+  * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
-  
-  body {
+}
+
+html, body {
+    height: 100%; /* Ensure full height */
+    display: flex;
+    flex-direction: column;
+}
+
+body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     color: #333;
-  }
-  
+}
+
   /* En-tête */
-  header {
+header {
     background-color: #2c3e50;
     padding: 15px;
     color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-  
-  nav ul {
+}
+
+nav ul {
     list-style: none;
     display: flex;
-  }
-  
-  nav ul li {
+}
+
+nav ul li {
     margin: 0 15px;
-  }
-  
-  nav ul li a {
+}
+
+nav ul li a {
     color: white;
     text-decoration: none;
-  }
-  
-  nav ul li a:hover {
+}
+
+nav ul li a:hover {
     text-decoration: underline;
-  }
-  
+}
+
   /* Sections principales */
-  main {
+main {
+    flex: 1; /* mettre le footer en dessous */
     padding: 30px;
-  }
-  
-  .tab-content {
+}
+
+.tab-content {
     display: none;
     margin-top: 20px;
-  }
-  
-  .tab-content.active {
+}
+
+.tab-content.active {
     display: block;
-  }
-  
+}
+
   /* Styles pour les sections */
-  .section {
+.section {
     margin: 20px 0;
-  }
-  
-  h1 {
+}
+
+h1 {
     font-size: 28px;
     margin-bottom: 20px;
-  }
-  
-  h2 {
+}
+
+h2 {
     color: #2980b9;
     font-size: 24px;
     margin-bottom: 10px;
-  }
-  
-  footer {
+}
+
+/* Footer reste en bas de la page*/
+footer {
     background-color: #2c3e50;
     padding: 10px;
     text-align: center;
     color: white;
-    margin-top: 40px;
-  }
+    margin-top: 702px;
+}
