--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -7,3 +7,14 @@
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   <link rel="icon"        href="{% static 'assets/favicon.ico' %}" type="image/x-icon">
 </head>
+
+<body>
+    <header>
+      <h1>{% block header_title %}Bienvenue sur Masomo{% endblock %}</h1>
+      <nav>
+        <ul>
+          <li><a href="{% url 'students:list' %}">Étudiants</a></li>
+          <li><a href="{% url 'gestion:dashboard' %}">Gestion</a></li>
+        </ul>
+      </nav>
+    </header>
