updating base footer

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -22,3 +22,12 @@
     <main>
         {% block content %}{% endblock %}
       </main>
+
+      <footer>
+        <p>&copy; 2025 School Management System</p>
+      </footer>
+    
+      <script src="{% static 'js/scripts.js' %}"></script>
+    </body>
+    </html>
+    
