--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -6,28 +6,27 @@
   <title>{% block title %}Masomo{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   <link rel="icon"        href="{% static 'assets/favicon.ico' %}" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
-    <header>
-      <h1>{% block header_title %}Bienvenue sur Masomo{% endblock %}</h1>
-      <nav>
-        <ul>
-          <li><a href="{% url 'students:list' %}">Étudiants</a></li>
-          <li><a href="{% url 'gestion:dashboard' %}">Gestion</a></li>
-        </ul>
-      </nav>
-    </header>
+  <header>
+    <h1>{% block header_title %}Bienvenue sur Masomo{% endblock %}</h1>
+    <nav>
+      <ul>
+        <li><a href="{% url 'students:list' %}">Étudiants</a></li>
+        <li><a href="{% url 'gestion:dashboard' %}">Gestion</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main>
-        {% block content %}{% endblock %}
-      </main>
+  <main>
+    {% block content %}{% endblock %}
+  </main>
 
-      <footer>
-        <p>&copy; 2025 School Management System</p>
-      </footer>
-    
-      <script src="{% static 'js/scripts.js' %}"></script>
-    </body>
-    </html>
-    
+  <footer>
+    <p>&copy; 2025 School Management System</p>
+  </footer>
+
+  <script src="{% static 'js/scripts.js' %}"></script>
+</body>
+</html>
