--- a/frontend/templates/Gestionduneecole.html
+++ b/frontend/templates/Gestionduneecole.html
@@ -22,6 +22,7 @@
                 <li><a href="#" class="tab-link" onclick="showSection('eleve')">Espace Élève</a></li>
                 <li><a href="#" class="tab-link" onclick="showSection('parent')">Espace Parent</a></li>
                 <li><a href="#" class="tab-link" onclick="showSection('general')">Fonctionnalités Générales</a></li>
+                <li><a href="#" class="tab-link" onclick="showSection('class')">Fonctionnalités Générales</a></li>
             </ul>
         </nav>
     </header>
