--- a/frontend/templates/student_detail.html
+++ b/frontend/templates/student_detail.html
@@ -7,3 +7,8 @@
 {% block content %}
   <h2>{{ student.first_name }} {{ student.last_name }}</h2>
   <ul>
+    <li><strong>Email:</strong> {{ student.email }}</li>
+    <li><strong>Date of Birth:</strong> {{ student.date_of_birth }}</li>
+    <li><strong>Registered on:</strong> {{ student.registration_date }}</li>
+  </ul>
+  <p>
