--- a/backend/students/templates/add_student.html
+++ b/backend/students/templates/add_student.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Student</title>
+    {{ form.media }} 
 </head>
 <body>
     <h1>Add New Student</h1>
