updating logout view

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -15,12 +15,16 @@
         <ul>
           <li><a href="{% url 'students:student_list' %}">Étudiants</a></li>
           <li><a href="{% url 'students:gestion' %}">Gestion</a></li>
-      
           {% if user.is_authenticated %}
-            <li><a href="{% url 'logout' %}">Logout</a></li>
-          {% else %}
-            <li><a href="{% url 'login' %}">Login</a></li>
-          {% endif %}
+          <li>
+            <form action="{% url 'logout' %}" method="post" style="display:inline;">
+              {% csrf_token %}
+              <button type="submit" class="nav-link-button">Logout</button>
+            </form>
+          </li>
+        {% else %}
+          <li><a href="{% url 'login' %}">Login</a></li>
+        {% endif %}        
         </ul>
       </nav>
       
