updating student detail page

--- a/frontend/templates/student_detail.html
+++ b/frontend/templates/student_detail.html
@@ -13,6 +13,7 @@
   </ul>
   <p>
     <a href="{% url 'students:student_edit' student.slug %}">Edit</a> |
+    <a href="{% url 'students:student_delete' student.slug %}">Delete</a> |
     <a href="{% url 'students:student_list' %}">Back to List</a>
   </p>
 {% endblock %}
