--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}Masomo{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="icon"        href="{% static 'assets/favicon.ico' %}" type="image/x-icon">
 </head>
 <body>
@@ -46,5 +47,7 @@
   </footer>
 
   <script src="{% static 'js/scripts.js' %}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
 </body>
 </html>
