--- a/backend/teachers/templates/add_teacher.html
+++ b/backend/teachers/templates/add_teacher.html
@@ -1,11 +1,13 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load static %}
+
+{% block title %}Add Teacher{% endblock %}
+{% block header_title %}Add New Teacher{% endblock %}
+
 {% block content %}
-<div class="container mx-auto p-4">
-  <h1 class="text-2xl font-bold mb-4">Add Teacher</h1>
-  <form method="post" enctype="multipart/form-data">
+  <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Save</button>
+    <button type="submit">Save</button>
   </form>
-</div>
 {% endblock %}
