updating students instance

--- a/backend/students/templates/add_student.html
+++ b/backend/students/templates/add_student.html
@@ -1,18 +1,15 @@
+{% extends "base.html" %}
+{% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Student</title>
-    {{ form.media }} 
-</head>
-<body>
-    <h1>Add New Student</h1>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Save</button>
-    </form>
-</body>
-</html>
+{% block title %}Add Student{% endblock %}
+{% block header_title %}Add New Student{% endblock %}
+
+{% block content %}
+  <form method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Save</button>
+  </form>
+
+  {{ form.media }}   {# Flatpickr CSS & JS #}
+{% endblock %}
