updating students instance

--- a/backend/students/templates/student_edit.html
+++ b/backend/students/templates/student_edit.html
@@ -12,5 +12,5 @@
     <a href="{% url 'students:student_detail' student.slug %}">Cancel</a>
   </form>
 
-  {{ form.media }}   {# Flatpickr CSS & JS for the date fields #}
+  {{ form.media }}
 {% endblock %}
