--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -1,12 +1,33 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Login{% endblock %}
+{% block header_title %}{% endblock %}  {# hide main header text #}
 
 {% block content %}
-  <h2>Login</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Log in</button>
-  </form>
+  <div class="auth-card">
+
+    <h1>Sign&nbsp;In</h1>
+
+    <form method="POST" novalidate>
+      {% csrf_token %}
+      {{ form.non_field_errors }}
+
+      <div class="field-row">
+        <label>Email:</label>
+        {{ form.username }}
+      </div>
+
+      <div class="field-row">
+        <label>Password:</label>
+        {{ form.password }}
+      </div>
+
+      <button class="btn-primary" type="submit">Login</button>
+    </form>
+
+    <p class="mt-3 text-center" style="font-size:.85rem;">
+      Don’t have an account? <span class="text-link">Sign up</span>
+    </p>
+  </div>
 {% endblock %}
